[package]
name = "abc354"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
abc354-a = { alias = "a", problem = "https://atcoder.jp/contests/abc354/tasks/abc354_a" }
abc354-b = { alias = "b", problem = "https://atcoder.jp/contests/abc354/tasks/abc354_b" }
abc354-c = { alias = "c", problem = "https://atcoder.jp/contests/abc354/tasks/abc354_c" }
abc354-d = { alias = "d", problem = "https://atcoder.jp/contests/abc354/tasks/abc354_d" }
abc354-e = { alias = "e", problem = "https://atcoder.jp/contests/abc354/tasks/abc354_e" }
abc354-f = { alias = "f", problem = "https://atcoder.jp/contests/abc354/tasks/abc354_f" }
abc354-g = { alias = "g", problem = "https://atcoder.jp/contests/abc354/tasks/abc354_g" }

[[bin]]
name = "abc354-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc354-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc354-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc354-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc354-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc354-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc354-g"
path = "src/bin/g.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }
ac-library-rs = { version = "=0.1.1" }

[dev-dependencies]
