[package]
name = "arc177"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
arc177-a = { alias = "a", problem = "https://atcoder.jp/contests/arc177/tasks/arc177_a" }
arc177-b = { alias = "b", problem = "https://atcoder.jp/contests/arc177/tasks/arc177_b" }
arc177-c = { alias = "c", problem = "https://atcoder.jp/contests/arc177/tasks/arc177_c" }
arc177-d = { alias = "d", problem = "https://atcoder.jp/contests/arc177/tasks/arc177_d" }
arc177-e = { alias = "e", problem = "https://atcoder.jp/contests/arc177/tasks/arc177_e" }
arc177-f = { alias = "f", problem = "https://atcoder.jp/contests/arc177/tasks/arc177_f" }

[[bin]]
name = "arc177-a"
path = "src/bin/a.rs"

[[bin]]
name = "arc177-b"
path = "src/bin/b.rs"

[[bin]]
name = "arc177-c"
path = "src/bin/c.rs"

[[bin]]
name = "arc177-d"
path = "src/bin/d.rs"

[[bin]]
name = "arc177-e"
path = "src/bin/e.rs"

[[bin]]
name = "arc177-f"
path = "src/bin/f.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }
ac-library-rs = { version = "=0.1.1" }

[dev-dependencies]
