[package]
name = "arc178"
version = "0.1.0"
edition = "2021"

[package.metadata.cargo-compete.bin]
arc178-a = { alias = "a", problem = "https://atcoder.jp/contests/arc178/tasks/arc178_a" }
arc178-b = { alias = "b", problem = "https://atcoder.jp/contests/arc178/tasks/arc178_b" }
arc178-c = { alias = "c", problem = "https://atcoder.jp/contests/arc178/tasks/arc178_c" }
arc178-d = { alias = "d", problem = "https://atcoder.jp/contests/arc178/tasks/arc178_d" }
arc178-e = { alias = "e", problem = "https://atcoder.jp/contests/arc178/tasks/arc178_e" }
arc178-f = { alias = "f", problem = "https://atcoder.jp/contests/arc178/tasks/arc178_f" }

[[bin]]
name = "arc178-a"
path = "src/bin/a.rs"

[[bin]]
name = "arc178-b"
path = "src/bin/b.rs"

[[bin]]
name = "arc178-c"
path = "src/bin/c.rs"

[[bin]]
name = "arc178-d"
path = "src/bin/d.rs"

[[bin]]
name = "arc178-e"
path = "src/bin/e.rs"

[[bin]]
name = "arc178-f"
path = "src/bin/f.rs"

[dependencies]
proconio = { version = "=0.4.5", features = ["derive"] }
ac-library-rs = { version = "=0.1.1" }

[dev-dependencies]
